[gd_scene load_steps=10 format=3 uid="uid://cxxybm06lsqvr"]

[ext_resource type="Script" uid="uid://y8065w35x8ex" path="res://scripts/test_level_manager.gd" id="1_hidvt"]
[ext_resource type="Texture2D" uid="uid://djv1jsrblx6cb" path="res://assets/textures/prototype_surface_1.png" id="1_p1gcm"]
[ext_resource type="PackedScene" uid="uid://c8t036440xf3" path="res://scenes/player_3d.tscn" id="2_qm5my"]
[ext_resource type="PackedScene" uid="uid://cfcdfh2hxyn7a" path="res://scenes/growing_platform_3d.tscn" id="3_b5onc"]
[ext_resource type="PackedScene" uid="uid://j4c625fopnpl" path="res://scenes/timer_trigger_3d.tscn" id="4_uxpu0"]
[ext_resource type="PackedScene" uid="uid://vtkc3myfd1i6" path="res://scenes/checkpoint_respawn_3d.tscn" id="5_rbj8j"]
[ext_resource type="PackedScene" uid="uid://d2rnwb6em08gc" path="res://scenes/death_plane_3d.tscn" id="7_q5oqk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qm5my"]
albedo_color = Color(0.207843, 1, 1, 1)
albedo_texture = ExtResource("1_p1gcm")
uv1_scale = Vector3(0.25, 0.25, 0.25)
uv1_triplanar = true
uv2_scale = Vector3(0.25, 0.25, 0.25)
uv2_triplanar = true

[sub_resource type="Environment" id="Environment_b5onc"]
background_mode = 1
background_color = Color(0.890374, 0.927404, 1, 1)
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 4

[node name="Test1" type="Node3D"]
script = ExtResource("1_hidvt")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(108.084, 1, 116.662)
material = SubResource("StandardMaterial3D_qm5my")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b5onc")

[node name="Player3D" parent="." instance=ExtResource("2_qm5my")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
max_speed = 20.0
camera_fov_dashing = 62
max_air_control_speed = 20.0

[node name="GrowingPlatform" parent="." instance=ExtResource("3_b5onc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -72.2371, -0.688374, -68.7504)
move_time = 5.0
movement_delay = 0.0
final_relative_pos = Vector3(200, 0, 0)

[node name="GrowingPlatform2" parent="." instance=ExtResource("3_b5onc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 109.148, -0.688374, -82.5443)
move_time = 5.0
movement_delay = 1.0
final_relative_pos = Vector3(-200, 0, 0)

[node name="GrowingPlatform3" parent="." instance=ExtResource("3_b5onc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -111.847, -0.688374, -107.359)
move_time = 5.0
movement_delay = 2.0
final_relative_pos = Vector3(200, 0, 0)

[node name="TimerTrigger3D" parent="." instance=ExtResource("4_uxpu0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.09353, 0.509963, -53.2536)
size = Vector3(10, 16.395, 10)

[node name="CheckpointRespawn3D" parent="." instance=ExtResource("5_rbj8j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0026, 0, 53.2024)
size = Vector3(10, 5, 10)

[node name="CheckpointRespawn3D2" parent="." instance=ExtResource("5_rbj8j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -49.0267, -0.499329, 53.3421)
size = Vector3(10, 5, 10)

[node name="DeathPlane3D" parent="." instance=ExtResource("7_q5oqk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.43191, -11.2855, 9.5695)
size = Vector3(250, 5, 250)

[connection signal="player_entered" from="TimerTrigger3D" to="GrowingPlatform" method="_on_timer_trigger_3d_player_entered"]
[connection signal="player_entered" from="TimerTrigger3D" to="GrowingPlatform2" method="_on_timer_trigger_3d_player_entered"]
[connection signal="player_entered" from="TimerTrigger3D" to="GrowingPlatform3" method="_on_timer_trigger_3d_player_entered"]
[connection signal="player_entered" from="CheckpointRespawn3D" to="." method="_on_checkpoint_respawn_3d_player_entered"]
[connection signal="player_entered" from="CheckpointRespawn3D2" to="." method="_on_checkpoint_respawn_3d_player_entered"]
[connection signal="player_entered" from="DeathPlane3D" to="." method="_on_death_plane_3d_player_entered"]
